# DeltaForge-task

./: controller.py  main.py  pyproject.toml  to-do.txt
src/: dataLoader.py  vectorStore.py
src/agents/: researchAgent.py  summarizingAgent.py
src/agents/summarizing_agent/: agent.py
src/llm/: __init__.py  client.py
src/retrival/: __init__.py  dataLoader.py  embedding.py  search.py  vectorStore.py
src/summarizer/: quizGenerator.py  summarizer.py  topic_detector.py
